# MaPlayer

./: AGENTS.md  README.md  pubspec.yaml
.github/workflows/: release.yml
android/app/: build.gradle.kts
assets/js/: home_webview_bridge.js
docs/plans/: 2026-02-21-chunk-lru-and-playback-progress-design.md  2026-02-21-chunk-lru-and-playback-progress.md  2026-02-21-proxy-streaming-refactor-design.md  2026-02-21-proxy-streaming-refactor.md  2026-02-21-seek-stall-fix-design.md  2026-02-21-seek-stall-fix.md  2026-02-21-warm-cache-design.md  2026-02-21-warm-cache-impl.md  2026-02-23-cross-platform-compat-design.md  2026-02-23-cross-platform-compat.md  2026-02-23-mobile-layout-design.md  2026-02-23-mobile-layout.md  2026-02-23-playback-position-memory-design.md  2026-02-23-playback-position-memory.md  2026-02-23-player-page-mobile-portrait-design.md  (+4 more)
integration_test/: simple_test.dart
lib/: main.dart
linux/: CMakeLists.txt
logo/: generate_icons.swift  svg_to_png.swift
rust/: Cargo.toml
rust/src/: config.rs  frb_generated.rs  lib.rs
rust/src/api/: mod.rs  proxy_api.rs  simple.rs
rust/src/detect/: container.rs  mod.rs
rust/src/engine/: cache.rs  downloader.rs  mod.rs  session.rs  stats.rs  warmup.rs
rust/src/server/: handler.rs  mod.rs
rust/src/source/: http_source.rs  iso_source.rs  mod.rs  traits.rs
rust/tests/: cache_test.rs  detect_test.rs  http_source_test.rs  server_test.rs
rust_builder/: pubspec.yaml
test/: tvbox_config_repository_test.dart  tvbox_parser_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+103 files in other folders)
